# RE-DACT

./: .gitignore  README.md  main.py  ollama_install.sh  prompt.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
core/: __init__.py  handle_images.py  handle_pdf.py  misc.py
