[tool.poetry]
name = "redact-app"
version = "0.1.0"
description = "A streamlit app to redact crap"
authors = ["Siddhesh Agarwal <siddhesh.agarwal@gmail.com>"]
license = "0BSD"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.1"
PyPDF2 = "^3.0.1"
PyMuPDF = "^1.24.9"
openai = "^1.40.6"
ujson = "^5.10.0"
opencv-python = "^4.10.0"
instructor = "^1.4.1"
groq = "^0.14.0"
pdf2image = "^1.17.0"
pytesseract = "^0.3.13"
pillow = "^11.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
